--- a/.github/workflows/docs-translate-template.yaml
+++ b/.github/workflows/docs-translate-template.yaml
@@ -46,7 +46,7 @@ jobs:
         env:
           ALL_CHANGED_FILES: ${{ steps.changed-markdown-files.outputs.all_changed_files }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-        run: node scripts/translate.js
+        run: node .github/workflows/translate.js
 
 #      - name: Build documentation website
 #        run: npm run build
