--- a/.github/workflows/translate-config.json
+++ b/.github/workflows/translate-config.json
@@ -1,6 +1,6 @@
 {
   "sourceDir": "./docs",
-  "targetLanguages": ["zh-Hans"],
+  "targetLanguages": ["zh-Hans", "zh-Hant", "ko", "ja"],
   "modelConfigs": {
     "zh-Hans": { "provider": "google", "model": "gemini-2.0-flash" },
     "zh-Hant": { "provider": "google", "model": "gemini-2.0-flash" },
